Revision history for Perl extension {{$dist->name}}

{{$NEXT}}

1.301     2012-04-25T03:56:11Z

    - Fix double-interpolation of list headings
      which caused escaping of the markdown characters.
      Thanks to motemen for the pull request (gh-1).

    - Add TODO tests for improving list handling.

1.300000  2012-04-08T00:08:25Z

    - Document that characters in varbatim paragraphs and code sections
      are not escaped.
    - Bump release number to demonstrate major formatting difference
      of last change (backslash-escaped characters).
      (Forgot to do it last time.)

1.200001  2012-04-07T23:16:23Z

    - Escape characters that are special to Markdown
      (but normal in Pod) with backslashes.
      Thanks to Florian (fschlich at zedat dot fu-berlin dot de)
      for the initial patch (rt-75620).

1.200000  2011-11-28T17:57:01Z
    [Enhancements]
    - Handle POD formatting codes embedded in links
    - Render Z<> and X<> as blank strings
    - Handle numeric (hex, octal, and decimal) E<> escapes
    - Convert spaces in S<> to &nbsp;

    [Format Changes]
    - S<> no longer produces backticks (code sections).
      This is consistent with perlpod and perlpodspec.
      Use something like S<C<$x + $y>> if you intend it to be treated as code.
    - Author meta tag with no title meta tag does not produce a leading newline.
      This was considered a bug.

    [Tests]
    - More tests, increased coverage

1.120001  2011-11-27T04:07:30Z
    [Prereqs]
    - Require version 1.10 of Pod::ParseLink (core in perl 5.12)
      to handle alt text with schemes/absolute URLs.
      This can be changed from "requires" to "recommends" if it poses a problem.

    [Test Fix]
    - Skip tests (rather than fail) for alt text with absolute url
      if Pod::ParseLink < 1.10

1.120000  2011-11-19T05:44:51Z
    [Enhancements]
    - Use Pod::ParseLink to dramatically improve (and simplify) link parsing
      (including sections, alternate text, and man pages).
